# battery-notify

./: Cargo.toml  README.md  battery-notify.service  flake.nix
.github/workflows/: ci.yml
src/: bluetooth.rs  config.rs  main.rs  monitors.rs  notification.rs  system.rs
