[package]
name = "battery-notify"
version = "0.2.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "A simple battery notifier for Linux."
repository = "https://github.com/cdown/battery-notify"
readme = "README.md"
keywords = ["battery", "linux", "notify", "popup"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.60.0"

[dependencies]
anyhow = "1.0.70"
cancellable-timer = "0.1.0"
confy = "0.5.1"
ctrlc = { version = "3.2.5", features = ["termination"] }
notify-rust = "4.8.0"
once_cell = { version = "1.17.1", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
serde_plain = "1.0.1"
x11rb = { version = "0.11.1", features = ["randr"], optional = true }

[features]
default = ["mons"]
mons = ["once_cell", "x11rb"]
