[package]
name = "battery-notify"
version = "0.3.3"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "A simple battery notifier for Linux."
repository = "https://github.com/cdown/battery-notify"
readme = "README.md"
keywords = ["battery", "linux", "notify", "popup"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.60.0"

[dependencies]
anyhow = "1.0.71"
cancellable-timer = "0.1.0"
confy = "0.5.1"
ctrlc = { version = "3.4.0", features = ["termination"] }
env_logger = { version = "0.10.0", features = ["humantime"], default-features = false }
hashbrown = "0.14.0"
log = "0.4.19"
notify-rust = "4.8.0"
once_cell = { version = "1.18.0", optional = true }
sd-notify = "0.4.1"
serde = { version = "1.0.173", default-features = false }
serde_plain = "1.0.1"
x11rb = { version = "0.12.0", features = ["randr"], optional = true, default-features = false }
zbus = { version = "3.14.1", optional = true, default-features = false }

[features]
default = ["mons", "bluetooth"]
mons = ["once_cell", "x11rb"]
bluetooth = ["once_cell", "zbus"]
