[package]
name = "battery-notify"
version = "0.3.5"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "A simple battery notifier for Linux."
repository = "https://github.com/cdown/battery-notify"
readme = "README.md"
keywords = ["battery", "linux", "notify", "popup"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.94"
cancellable-timer = "0.1.0"
confy = "0.6.1"
ctrlc = { version = "3.4.5", features = ["termination"] }
env_logger = { version = "0.11.5", features = ["humantime"], default-features = false }
hashbrown = "0.15.1"
log = "0.4.22"
notify-rust = "4.11.3"
once_cell = { version = "1.20.2", optional = true }
sd-notify = "0.4.3"
serde = { version = "1.0.215", default-features = false }
serde_plain = "1.0.2"
x11rb = { version = "0.13.1", features = ["randr"], optional = true, default-features = false }
zbus = { version = "5.1.1", features = ["async-io", "blocking-api"], optional = true, default-features = false }

[features]
default = ["mons", "bluetooth"]
mons = ["once_cell", "x11rb"]
bluetooth = ["once_cell", "zbus"]
